src/styles/Main.css
    :root {
    --accent: #96B7E9;
    --secondary: #F59D4B;
    /*--secondary: #FFB775;*/
    --neutral10: #E6E6E6;
    --neutral9: #BFBFBF;
    --neutral8: #8C8C8C;
    --neutral7: #666666;
    --neutral6: #4D4D4D;
    --neutral5: #3D3D3D;
    --neutral4: #333333;
    --neutral3: #2B2B2B;
    --neutral2: #262626;
    --neutral1: #242424;
    }

    html {
    background-color: var(--neutral1);
    color: var(--neutral9);
    font-family: "Lato", sans-serif;
    font-size: 16px;
    line-height: 25px;
    }

    body {
        margin: 0;
        padding: 0
    }

    /* Text elements */ 
    h1, h2, h3 {
    font-family: "Archivo", sans-serif;
    font-weight: 700;
    color: var(--neutral10);
    line-height: normal;
    }
    h4, h5, h6 {
    font-weight: 400;
    font-family: "Archivo", sans-serif;
    color: var(--neutral10);
    line-height: normal;
    }

    h1 {
    font-size: 32px;
    margin-top: 10px;
    margin-bottom: 8px;
    }

    h2 {
    font-size: 24px;
    margin-top: 6px;
    margin-bottom: 6px;
    }

    h3 {
    font-size: 20px;
    margin-top: 8px;
    margin-bottom: 8px;
    }

    h4 {
    font-size: 16px;
    margin-top: 8px;
    margin-bottom: 8px;
    }

    p {
    margin-top: 0px;
    margin-bottom: 10px;
    }

    ul, ol {
    margin-top: 2px;
    padding-left: 16px;
    }

    li {
    margin: 5px;
    }

    a {
    color:var(--accent)
    } 

    a:hover {
        text-decoration: none;
        } 

    .page {
    margin-left: 18vw;
    margin-top: 5vh;
    margin-bottom: 50px;
    }

    @media only screen and (max-width: 600px) {
    .page {
        margin-left: 1vw;
        margin-top: 5vh;
    }
    }

    
    @media only screen and (min-width: 600px) and (max-width: 1224px) {
    .page {
        margin-left: 8vw;
        margin-top: 5vh;
    }
    }

    .content {
    display: flex;
    flex-direction: column;
    max-width: 525px;
    gap: 10px;
    }

